fix to support java 8